# bread

./: .dockerignore  .gitignore  .gitmodules  Dockerfile.bread  LICENSE  Makefile  README.md  app.css  docker-compose.yaml  example.env  extract.py  package.json  parse.py  pyproject.toml  requirements.txt  supervisord.conf
.evidence/template/: .profile.json  evidence.settings.json
.evidence/template/src/pages/: +layout.svelte  +page.md
.github/workflows/: api-deploy.yml  build-and-deply.yml  check-formatting.yml  dashboard-deploy.yml  dbt-test.yml  deploy.yml  tests.yml
.github/workflows/indexer/: api-deploy.yml  tests.yml
cloudbuild/: cloud-run-redeploy.yaml
dbt/: dbt_project.yml  profiles.yml
dbt/models/parsed/: blocks.sql  events.sql  log_attributes.sql  tx_result.sql
dbt/old_models/gas/: gas_used_per_day.sql
dbt/old_models/ibc/: daily_cum_ibc_transfers.sql  daily_ibc_transfers.sql  hourly_ibc_transfers.sql  ibc_transfers.sql  ibc_transfers_in.sql
dbt/old_models/txs/: cum_txs_per_day.sql  num_txs_per_day.sql
pages/: index.md
pipelines/: pipeline.py
poetry/: build.sh  projects.sh  remove_builds.sh
reports/: package.json
reports/pages/: docs.md  index.md
scripts/: _load_root_env_variables.sh  fmt.sh  open_dagit.sh  run_api_and_dash.sh  run_dagster.sh  run_indexer.sh  stop_dagster.sh  stop_indexer.sh
tests/: extract_test.py
