[tool.poetry]
name = "sn-mono"
version = "0.1.0"
description = ""
authors = ["Ethan Leifer <ethanleifer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10"
dashboard = { path = "./packages/dashboard", develop = true, extras = ["dev"] }
airflow = { path = "./packages/airflow", develop = true, extras = ["dev"] }
api = { path = "./packages/api", develop = true, extras = ["dev"] }
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
