[tool.poetry]
name = "sn-mono"
version = "0.1.0"
description = ""
authors = ["Ethan Leifer <ethanleifer@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.*"
dashboard = { path = "./packages/dashboard", develop = true, extras = ["dev"] }
api = { path = "./packages/api", develop = true, extras = ["dev"] }
indexer = { path = "./packages/indexer", develop = true, extras = ["dev"] }
jobs = { path = "./packages/jobs", develop = true, extras = ["dev"] }
black = "^22.12.0"
shandy-sqlfmt = {version = "^0.17.1", extras = ["jinjafmt"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
