[tool.poetry]
name = "bread"
version = "0.1.0"
description = ""
authors = ["Ethan Leifer <ethanleifer@gmail.com>", "Zack Gow <zackgow@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.*"
dashboard = { path = "./packages/dashboard", develop = true, extras = ["dev"] }
api = { path = "./packages/api", develop = true, extras = ["dev"] }
indexer = { path = "./packages/indexer", develop = true, extras = ["dev"] }
dags = { path = "./packages/dags", develop = true, extras = ["dev"] }
cli = { path = "./packages/cli", develop = true, extras = ["dev"] }
parse = { path = "./packages/parse", develop = true, extras = ["dev"] }
black = "^22.12.0"
shandy-sqlfmt = {version = "^0.17.1", extras = ["jinjafmt"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfmt]
exclude=["packages/dags/dbt_project/target/**/*", "packages/dags/dbt_project/dbt_packages/**/*", "packages/dags/dbt_project/models/jackal_providers/buy_storage.sql"]